--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Chris Taylor's CS50p Weather App</h1>
-        <form method="POST">
+        <form action="/" method="POST">
             <input type="text" name="city" placeholder="Enter city">
             <select name="units">
                 <option value="metric">Celsius</option>
